fixed spacing on button

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1584,7 +1584,9 @@ p.t-desc {
 	}
 	
 }
-
+input[type="text"], input[type="password"], input[type="email"], textarea, select {
+	display: inline;
+}
 /* Tablet Portrait size to standard 960 (devices and browsers) */
 @media only screen and (min-width: 1085px) and (max-width: 959px) {
 	
